[package]
name = "toml_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.57"
glob = "0.3.0"
pyo3 = { version = "0.16.5", features = ["extension-module", "anyhow"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
toml = "0.5.9"
